<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YemekDetay">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarYemekDetay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lacivert"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:collapseIcon="@drawable/geri_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/geri_icon">

        <ImageButton
            android:id="@+id/imageButtonLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/lacivert"
            android:contentDescription="@string/logo"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:tint="@color/sari"
            tools:layout_editor_absoluteX="181dp"
            tools:layout_editor_absoluteY="3dp" />


    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/lacivert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarYemekDetay">

        <ImageView
            android:id="@+id/imageViewYemekResim"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:elevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/yemek_placeholder" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewYemekDetay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="-40dp"
            app:cardBackgroundColor="@color/gri"
            app:cardCornerRadius="40dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewYemekAd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:text="TextView"
                    android:textColor="@color/acikSiyah"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewYemekFiyat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="TextView"
                    android:textColor="@color/lacivert"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewYemekAd" />

                <ImageButton
                    android:id="@+id/imageButtonAdetEkle"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="140dp"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/gri"
                    android:scaleType="fitCenter"
                    android:src="@drawable/add_buton"
                    android:tint="@color/sari"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewYemekFiyat" />

                <TextView
                    android:id="@+id/textViewYemekAdet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/imageButtonAdetSil"
                    app:layout_constraintStart_toEndOf="@+id/imageButtonAdetEkle"
                    app:layout_constraintTop_toBottomOf="@+id/textViewYemekFiyat" />

                <ImageButton
                    android:id="@+id/imageButtonAdetSil"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="140dp"
                    android:layout_marginRight="140dp"
                    android:background="@color/gri"
                    android:scaleType="fitCenter"
                    android:src="@drawable/minus_button"
                    android:tint="@color/sari"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewYemekFiyat" />

                <Button
                    android:id="@+id/buttonSepetEkle"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="64dp"
                    android:layout_marginLeft="64dp"
                    android:layout_marginEnd="64dp"
                    android:layout_marginRight="64dp"
                    android:layout_marginBottom="64dp"
                    android:text="@string/sepete_ekle"
                    android:textColor="@color/lacivert"
                    android:textStyle="bold"
                    app:backgroundTint="@color/sari"
                    app:cornerRadius="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:strokeColor="#FFC107" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/interest"
                    android:textColor="@color/koyuGri"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toTopOf="@+id/topRv"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/topRv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/buttonSepetEkle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>